themes/influence/tags/1.0.7/README.md
Influence Theme
---------------
We created Influence with the single goal of building a platform for you to influence the world with your content.

License
---------------
Influence WordPress Theme, Copyright 2014 Greg Priday
Influence is distributed under the terms of the GNU GPL

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/copyleft/gpl.html.

Influence WordPress Theme is derived from Underscores WordPress Theme, Copyright 2012 Automattic http://underscores.me/
Underscores WordPress Theme is distributed under the terms of the GNU GPL

Influence includes the following 3rd party resources:

HTML5 Shiv, Copyright 2011 Alexander Farkas
Released under a dual MIT/GPL2 License
Source: https://code.google.com/p/html5shiv/

FitVids, Copyright 2013 Chris Coyier
Released under the WTFPL license - http://sam.zoy.org/wtfpl/
Source: http://fitvidsjs.com/

Selectivizr, Copyright 2011 Keith Clark
Freely distributable under the terms of the MIT license

LESS Elements, Copyright 2011 Dmitry Fadeyev
Dedicated to the public domain and is free for all uses, commercial or otherwise.

All demo and screenshot photographs are copyright Kathy Priday and licensed under GPL with permission from the author. Demo video was created by Greg Priday and licensed under public domain.

Icon Font
---------------
The font influence-icons contains icons from the Feather icon set. Copyright Cole Bemis, licensed under MIT - http://colebemis.com/feather/

The menu icon in influence-icons is by Greg Priday and licensed under the same MIT license for consistency.

Font created using Icomoon - http://icomoon.io

Change Log
---------------

**1.0.7**
* Fixed slider theme setting.
* Framework updates.
* Updated all links to HTTPS.
* Fixed web font for HTTPS sites.

**1.0.6**
* Reduced font size slightly.
* Framework updates to add tour and settings preview.
* Added tour content.
* Changed how the home page slider is displayed.

**1.0.5**
* Updated framework to fix theme settings.
* Added prebuilt layouts for Page Builder.

**1.0.4**
* Fixed iconic font

**1.0.3**
* Changed name of iconic fonts
* Description and theme URI updated.
* Updated license information.

**1.0.2**
* Updated Page Builder support.
* Removed default logo.
* Added more Influence Plus information.

**1.0.1**
* Integrated with more plugins.
* Improved styling.
* Added Influence Plus information.

**1.0**
* Initial release.